feat: read one posting and filter results by posting
